--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,8 @@ stages:
         testType: 'app'
         monitorWhen: 'always'
         failOnIssues: false
+        projectName: 'juiceshop'
+        organization: 'mahesh0054'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
