--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,12 +29,10 @@ stages:
       vmImage: $(vmImageName)
     steps:
     
-    - task: SnykSecurityScan@1
+    - task: WhiteSource@21
       inputs:
-        serviceConnectionEndpoint: 'connectionnamesnyk'
-        testType: 'app'
-        monitorWhen: 'always'
-        failOnIssues: false
+        cwd: '$(System.DefaultWorkingDirectory)'
+        projectName: 'juiceshop'
 
     - task: Docker@2
       displayName: Build and push an image to container registry
